# TransmittanceModels

./: CMakeLists.txt  README.md
Resources/Plane/: plane.mtl  plane1.mtl
Resources/pan/: pan.mtl
include/: CMakeLists.txt
include/CustomLib/: CMakeLists.txt  GUI.h  Mylib.cpp  camera.h  mesh.h  model.h  root_directory.h
src/: CMakeLists.txt  GUI.cpp  main.cpp
